# Hakari

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  HakariORM.cpp  HakariORM.h  HakariTypes.cpp  README.md  main.cpp  vcpkg.json
client/: CMakeLists.txt  main_client.cpp
client-discord/: CMakeLists.txt
client-gui/: CMakeLists.txt  main_client.cpp
client/gui/: GuiManager.cpp  GuiManager.h
client/net/: ClientManager.cpp  ClientManager.h
common/: CMakeLists.txt  test.cpp
common/core/: FileReader.h
common/data/: Dataclasses.h
common/net/: ConnectionManager.cpp  ConnectionManager.h  protocol.h
core/: CMakeLists.txt
core/include/core/: ClientManager.h  NetworkManager.h  ServerManager.h
core/include/core/data/: CollectionEntry.h  CollectionWrapper.h  Database.h  Field.h  ScopedClient.h
core/include/core/data/collection/: Card.h
core/include/core/discord/: Bot.h
core/include/core/net/: ClientManager.h  ConnectionManager.h  NetworkManager.h  ServerManager.h
core/include/core/persistence/: CollectionEntry.h  CollectionWrapper.h  Database.h  Field.h  QueryBuilder.h  ScopedClient.h
core/include/core/persistence/collection/: Card.h
core/include/core/utils/: Constants.h  FileReader.h  TaskManager.h  ThreadsafeQueue.h  UUID.h
core/src/: ClientManager.cpp  NetworkManager.cpp  ServerManager.cpp
core/src/data/: Database.cpp
core/src/discord/: Bot.cpp
core/src/net/: ClientManager.cpp  ConnectionManager.cpp  NetworkManager.cpp  ServerManager.cpp
core/src/persistence/: Database.cpp  QueryBuilder.cpp
include/: Constants.h  HakariBot.h
include/Backend/: CommandHandler.h  InteractionManager.h  ReactionHandler.h
include/Backend/Commands/: CollectionCommand.h  DropCommand.h  PingCommand.h
include/Persistence/: CollectionEntry.h  CollectionWrapper.h  Database.h  Field.h
include/Persistence/Collection/: Card.h  CardObject.h  Character.h  CollectionEntry.h  CollectionWrapper.h  FieldType.h  Player.h
include/Utils/: Logger.h  Utils.h
scripts/: cards_from_chars.py  setup_env.bat
server/: CMakeLists.txt  main_server.cpp
server/app/: Application.cpp  Application.h
server/core/: CommandHandler.h  TaskManager.h
server/data/: CollectionEntry.h  CollectionWrapper.h  DataService.h  Database.cpp  Database.h  Field.h  ScopedClient.h
server/data/collection/: Card.h
server/discord/: Bot.cpp  Bot.h  Command.h
server/include/server/: Application.h
server/net/: ServerManager.cpp  ServerManager.h
server/src/: Application.cpp
server/tasks/: Authenticate.h  GameLogic.h  OpenPack.h  Tasks.h
server/web/: WebService.cpp  WebService.h  package.json
server/web/frontend/: api.js  auth.js  index.html  main.js  style.css
server/web/frontend/api/: api.js  collectionApi.js  friendsApi.js
server/web/frontend/styles/: auth.css  base.css  card.css  collection.css  components.css  friends.css  inventory.css  layout.css
server/web/frontend/ui/: card.js  notification.js
server/web/frontend/views/: collectionView.js  friendsView.js  inventoryView.js  loginView.js  mainView.js  registerView.js  storeView.js
server/web/src/: landing_page.jsx
src/: HakariBot.cpp  main.cpp
src/Backend/: CommandHandler.cpp  InteractionManager.cpp  ReactionHandler.cpp
src/Backend/Commands/: CollectionCommand.cpp  DropCommand.cpp  PingCommand.cpp
src/Persistence/: Database.cpp
src/Utils/: Utils.cpp
